--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<h2 id="display-time"></h2> 
+		<h2 id="display-time"></h2>
+		<button onclick="military()">12 hour time</button>
 	</body>
 	<script src="./index.js" defer></script>
 </html>
