Accurate timer and clock
I have finished the timer and clock part of the project. However, the code is quite bulky. Sometime in the future, someone can make a pull request to reduce the amount of code for this commit then enter it in manually (do not merge) and commit to the main branch.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<h2 id="display-time"></h2>
-		<button onclick="military()">12 hour time</button>
+		<button onclick="toggle()">12 hour time</button>
 	</body>
 	<script src="./index.js" defer></script>
 </html>
