timers for different days
timers used to only go to one div, but thats fixed now

--- a/index.html
+++ b/index.html
@@ -33,6 +33,104 @@
 						oninput="new timer(value, this.id)"
 					/>
 				</span>
+				<button
+					onclick="create(value, this.parentElement, this.parentElement.children)"
+				>
+					add new
+				</button>
+			</div>
+
+			<div id="tuesday" class="box">
+				<h2>tuesday</h2>
+				<span id="span">
+					<input
+						id="2"
+						type="time"
+						name="time-input"
+						class="time-input"
+						oninput="new timer(value, this.id)"
+					/>
+				</span>
+				<button onclick="create(value, this.parentElement)">
+					add new
+				</button>
+			</div>
+
+			<div id="wednesday" class="box">
+				<h2>wednesday</h2>
+				<span id="span">
+					<input
+						id="3"
+						type="time"
+						name="time-input"
+						class="time-input"
+						oninput="new timer(value, this.id)"
+					/>
+				</span>
+				<button onclick="create(value, this.parentElement)">
+					add new
+				</button>
+			</div>
+
+			<div id="thursday" class="box">
+				<h2>thursday</h2>
+				<span id="span">
+					<input
+						id="4"
+						type="time"
+						name="time-input"
+						class="time-input"
+						oninput="new timer(value, this.id)"
+					/>
+				</span>
+				<button onclick="create(value, this.parentElement)">
+					add new
+				</button>
+			</div>
+
+			<div id="friday" class="box">
+				<h2>friday</h2>
+				<span id="span">
+					<input
+						id="5"
+						type="time"
+						name="time-input"
+						class="time-input"
+						oninput="new timer(value, this.id)"
+					/>
+				</span>
+				<button onclick="create(value, this.parentElement)">
+					add new
+				</button>
+			</div>
+
+			<div id="saturday" class="box">
+				<h2>saturday</h2>
+				<span id="span">
+					<input
+						id="6"
+						type="time"
+						name="time-input"
+						class="time-input"
+						oninput="new timer(value, this.id)"
+					/>
+				</span>
+				<button onclick="create(value, this.parentElement)">
+					add new
+				</button>
+			</div>
+
+			<div id="sunday" class="box">
+				<h2>sunday</h2>
+				<span id="span">
+					<input
+						id="7"
+						type="time"
+						name="time-input"
+						class="time-input"
+						oninput="new timer(value, this.id)"
+					/>
+				</span>
 				<button onclick="create(value, this.parentElement)">
 					add new
 				</button>
