--- a/index.html
+++ b/index.html
@@ -12,42 +12,42 @@
 		<h2 id="display-time"></h2>
 		<button onclick="toggle()">12 hour time</button>
 		<br />
-		<input
+		<!-- 	<input
 			id="0"
 			type="time"
 			name="time-input"
 			class="time-input"
 			oninput="new timer(value, this.id)"
-		/>
+		/> -->
 
 		<!-- start the actuall ui -->
 		<div>
 			<div id="monday" class="box">
 				<h2>Monday</h2>
-				<span id="span">
+				<span class="span">
 					<input
 						id="1"
 						type="time"
 						name="time-input"
 						class="time-input"
+						data-the-day="monday"
 						oninput="new timer(value, this.id)"
 					/>
 				</span>
-				<button
-					onclick="create(value, this.parentElement, this.parentElement.children)"
-				>
+				<button onclick="create(value, this.parentElement)">
 					add new
 				</button>
 			</div>
 
 			<div id="tuesday" class="box">
 				<h2>tuesday</h2>
-				<span id="span">
+				<span class="span">
 					<input
 						id="2"
 						type="time"
 						name="time-input"
 						class="time-input"
+						data-the-day="tuesday"
 						oninput="new timer(value, this.id)"
 					/>
 				</span>
@@ -58,12 +58,13 @@
 
 			<div id="wednesday" class="box">
 				<h2>wednesday</h2>
-				<span id="span">
+				<span class="span">
 					<input
 						id="3"
 						type="time"
 						name="time-input"
 						class="time-input"
+						data-the-day="wednesday"
 						oninput="new timer(value, this.id)"
 					/>
 				</span>
@@ -74,12 +75,13 @@
 
 			<div id="thursday" class="box">
 				<h2>thursday</h2>
-				<span id="span">
+				<span class="span">
 					<input
 						id="4"
 						type="time"
 						name="time-input"
 						class="time-input"
+						data-the-day="thursday"
 						oninput="new timer(value, this.id)"
 					/>
 				</span>
@@ -90,12 +92,13 @@
 
 			<div id="friday" class="box">
 				<h2>friday</h2>
-				<span id="span">
+				<span class="span">
 					<input
 						id="5"
 						type="time"
 						name="time-input"
 						class="time-input"
+						data-the-day="friday"
 						oninput="new timer(value, this.id)"
 					/>
 				</span>
@@ -106,12 +109,13 @@
 
 			<div id="saturday" class="box">
 				<h2>saturday</h2>
-				<span id="span">
+				<span class="span">
 					<input
 						id="6"
 						type="time"
 						name="time-input"
 						class="time-input"
+						data-the-day="saturday"
 						oninput="new timer(value, this.id)"
 					/>
 				</span>
@@ -122,12 +126,13 @@
 
 			<div id="sunday" class="box">
 				<h2>sunday</h2>
-				<span id="span">
+				<span class="span">
 					<input
 						id="7"
 						type="time"
 						name="time-input"
 						class="time-input"
+						data-the-day="sunday"
 						oninput="new timer(value, this.id)"
 					/>
 				</span>
