layout of input section

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
 		<div>
 			<div id="monday" class="box">
 				<h2>Monday</h2>
-				<span class="span">
+
+				<div class="center-inputs">
+					<input type="text" />
 					<input
 						id="1"
 						type="time"
@@ -66,15 +68,20 @@
 						data-the-day="monday"
 						oninput="new timer(value, this.id)"
 					/>
-				</span>
-				<button onclick="create(value, this.parentElement)">
-					add new
-				</button>
+
+					<button onclick="create(this.parentElement.parentElement)">
+						add new
+					</button>
+				</div>
+				<br />
+				<span class="timer-container"></span>
 			</div>
 
 			<div id="tuesday" class="box">
 				<h2>tuesday</h2>
-				<span class="span">
+
+				<div class="center-inputs">
+					<input type="text" />
 					<input
 						id="2"
 						type="time"
@@ -83,15 +90,20 @@
 						data-the-day="tuesday"
 						oninput="new timer(value, this.id)"
 					/>
-				</span>
-				<button onclick="create(value, this.parentElement)">
-					add new
-				</button>
+
+					<button onclick="create(this.parentElement.parentElement)">
+						add new
+					</button>
+				</div>
+				<br />
+				<span class="timer-container"></span>
 			</div>
 
 			<div id="wednesday" class="box">
 				<h2>wednesday</h2>
-				<span class="span">
+
+				<div class="center-inputs">
+					<input type="text" />
 					<input
 						id="3"
 						type="time"
@@ -100,15 +112,21 @@
 						data-the-day="wednesday"
 						oninput="new timer(value, this.id)"
 					/>
-				</span>
-				<button onclick="create(value, this.parentElement)">
-					add new
-				</button>
+
+					<button onclick="create(this.parentElement.parentElement)">
+						add new
+					</button>
+				</div>
+				<br />
+				<span class="timer-container"></span>
 			</div>
 
 			<div id="thursday" class="box">
 				<h2>thursday</h2>
-				<span class="span">
+
+				<div class="center-inputs">
+					<input type="text" />
+
 					<input
 						id="4"
 						type="time"
@@ -117,15 +135,21 @@
 						data-the-day="thursday"
 						oninput="new timer(value, this.id)"
 					/>
-				</span>
-				<button onclick="create(value, this.parentElement)">
-					add new
-				</button>
+
+					<button onclick="create(this.parentElement.parentElement)">
+						add new
+					</button>
+				</div>
+				<br />
+				<span class="timer-container"></span>
 			</div>
 
 			<div id="friday" class="box">
 				<h2>friday</h2>
-				<span class="span">
+
+				<div class="center-inputs">
+					<input type="text" />
+
 					<input
 						id="5"
 						type="time"
@@ -134,15 +158,21 @@
 						data-the-day="friday"
 						oninput="new timer(value, this.id)"
 					/>
-				</span>
-				<button onclick="create(value, this.parentElement)">
-					add new
-				</button>
+
+					<button onclick="create(this.parentElement.parentElement)">
+						add new
+					</button>
+				</div>
+				<br />
+				<span class="timer-container"></span>
 			</div>
 
 			<div id="saturday" class="box">
 				<h2>saturday</h2>
-				<span class="span">
+
+				<div class="center-inputs">
+					<input type="text" />
+
 					<input
 						id="6"
 						type="time"
@@ -151,15 +181,21 @@
 						data-the-day="saturday"
 						oninput="new timer(value, this.id)"
 					/>
-				</span>
-				<button onclick="create(value, this.parentElement)">
-					add new
-				</button>
+
+					<button onclick="create(this.parentElement.parentElement)">
+						add new
+					</button>
+				</div>
+				<br />
+				<span class="timer-container"></span>
 			</div>
 
 			<div id="sunday" class="box">
 				<h2>sunday</h2>
-				<span class="span">
+
+				<div class="center-inputs">
+					<input type="text" />
+
 					<input
 						id="7"
 						type="time"
@@ -168,10 +204,13 @@
 						data-the-day="sunday"
 						oninput="new timer(value, this.id)"
 					/>
-				</span>
-				<button onclick="create(value, this.parentElement)">
-					add new
-				</button>
+
+					<button onclick="create(this.parentElement.parentElement)">
+						add new
+					</button>
+				</div>
+				<br />
+				<span class="timer-container"></span>
 			</div>
 		</div>
 	</body>
