--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 					/>
 
 					<button onclick="create(this.parentElement.parentElement)">
-						add new
+						Add New
 					</button>
 				</div>
 				<br />
@@ -92,7 +92,7 @@
 					/>
 
 					<button onclick="create(this.parentElement.parentElement)">
-						add new
+						Add New
 					</button>
 				</div>
 				<br />
@@ -114,7 +114,7 @@
 					/>
 
 					<button onclick="create(this.parentElement.parentElement)">
-						add new
+						Add New
 					</button>
 				</div>
 				<br />
@@ -137,7 +137,7 @@
 					/>
 
 					<button onclick="create(this.parentElement.parentElement)">
-						add new
+						Add New
 					</button>
 				</div>
 				<br />
@@ -160,7 +160,7 @@
 					/>
 
 					<button onclick="create(this.parentElement.parentElement)">
-						add new
+						Add New
 					</button>
 				</div>
 				<br />
@@ -183,7 +183,7 @@
 					/>
 
 					<button onclick="create(this.parentElement.parentElement)">
-						add new
+						Add New
 					</button>
 				</div>
 				<br />
@@ -206,7 +206,7 @@
 					/>
 
 					<button onclick="create(this.parentElement.parentElement)">
-						add new
+						Add New
 					</button>
 				</div>
 				<br />
