--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 	</head>
-	<body>
+	<body onload="toggle()">
 		<div class="top">
 			<div class="nav-container">
 				<div id="nav-left">
