added link to nav

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 		<div class="top">
 			<div class="nav-container">
 				<div id="nav-left">
-					<p>left</p>
+					<p>settings</p>
+					<!-- <span class="material-icons settings settings"> settings </span> -->
 				</div>
 				<div class="nav" style="display: inline-flex;">
 					<p id="nav-text">TD</p>
@@ -36,8 +37,12 @@
 					<p id="nav-numbers">00</p>
 				</div>
 				<div id="nav-right">
-					<p>right</p>
-					<!-- <span class="material-icons settings settings"> settings </span> -->
+					<a
+						href="https://github.com/cyber-chalk/TD-00"
+						target="_blank"
+						rel="noopener noreferrer"
+						>Github</a
+					>
 				</div>
 			</div>
 
@@ -50,7 +55,7 @@
 
 			<h2 id="display-time"></h2>
 			<span class="control">
-				<button class="btn" onclick="toggle()">12 hour time</button>
+				<button class="btn" onclick="toggle()">24 hour time</button>
 			</span>
 			<br />
 		</div>
