--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 		</div>
 		<div class="setting-container">
 			<p>Settings</p>
-			<input type="color" id="" />
-			<input type="color" id="" />
-			<input type="color" id="" />
+			<input type="color" />
+			<input type="color" />
+			<input type="color" />
 			<p id="close">close</p>
 		</div>
 		<div>
